<resources>
    <string name="app_name">HappyYou</string>
    <string name="test" translatable="false">https://happyyouapi</string>
    <string name="a" translatable="false">.watchyourhealth.com/</string>
    <string name="b" translatable="false">huapinew/</string>
    <string name="uat" translatable="false">https://fitnessuatapi</string>
    <string name="a1" translatable="false">.kotaklifeinsurance.com/</string>
    <string name="b1" translatable="false">huapi/</string>
    <string name="prod" translatable="false">https://fitnessapi</string>
    <string name="a2" translatable="false">.kotaklifeinsurance.com/</string>
    <string name="b2" translatable="false">huapi/</string>
    <string name="addFoodUrlTest">https://happyyouapi.watchyourhealth.com/ui/diet-tracker/add-food</string>
    <string name="addExerciseUrlTest">https://happyyouapi.watchyourhealth.com/ui/diet-tracker/add-workout</string>
    <string name="viewFoodUrlTest">https://happyyouapi.watchyourhealth.com/ui/diet-tracker/todays-meal</string>
    <string name="getVisitURLTest">https://kli.getvisitapp.net/kli/sso?userId=</string>
    <string name="viewExerciseUrlTest">https://happyyouapi.watchyourhealth.com/ui/diet-tracker/todays-workout</string>
    <string name="webinarURLTest">https://happyyouapi.watchyourhealth.com/ui/webinar-list</string>
    <string name="addFoodUrlUat">https://fitnessuatapi.kotaklifeinsurance.com/huui/diet-tracker/add-food</string>
    <string name="addExerciseUrlUat">https://fitnessuatapi.kotaklifeinsurance.com/huui/diet-tracker/add-workout</string>
    <string name="viewFoodUrlUat">https://fitnessuatapi.kotaklifeinsurance.com/huui/diet-tracker/todays-meal</string>
    <string name="getVisitURLUat">https://kli.getvisitapp.net/kli/sso?userId=</string>
    <string name="webinarURLUat">https://fitnessuatapi.kotaklifeinsurance.com/huui/webinar-list</string>
    <string name="viewExerciseUrlUat">https://fitnessuatapi.kotaklifeinsurance.com/huui/diet-tracker/todays-workout</string>
    <string name="addFoodUrlProd">https://fitness.kotaklifeinsurance.com/huui/diet-tracker/add-food</string>
    <string name="addExerciseUrlProd">https://fitness.kotaklifeinsurance.com/huui/diet-tracker/add-workout</string>
    <string name="viewFoodUrlProd">https://fitness.kotaklifeinsurance.com/huui/diet-tracker/todays-meal</string>
    <string name="getVisitURLProd">https://kli.getvisitapp.com/kli/sso?userId=</string>
    <string name="webinarURLProd">https://fitness.kotaklifeinsurance.com/huui/webinar-list</string>
    <string name="viewExerciseUrlProd">https://fitness.kotaklifeinsurance.com/huui/diet-tracker/todays-workout</string>
    <string name="medpayOPDTest">https://happyyouapi.watchyourhealth.com/ui/medPay/appointments</string>
    <string name="medpayPharmacyTest">https://happyyouapi.watchyourhealth.com/ui/pharmacy/index</string>
    <string name="qcPTest">https://happyyouapi.watchyourhealth.com/ui/payment-gateway</string>
    <string name="medpayOPDUat">https://fitnessuatapi.kotaklifeinsurance.com/huui/medPay/appointments</string>
    <string name="medpayPharmacyUat">https://fitnessuatapi.kotaklifeinsurance.com/huui/pharmacy/index</string>
    <string name="qcPUat">https://fitnessuatapi.kotaklifeinsurance.com/huui/payment-gateway</string>
    <string name="medpayOPDProd">https://fitness.kotaklifeinsurance.com/huui/medPay/appointments</string>
    <string name="medpayPharmacyProd">https://fitness.kotaklifeinsurance.com/huui/pharmacy/index</string>
    <string name="qcPProd">https://fitness.kotaklifeinsurance.com/huui/payment-gateway</string>
    <string name="android_update_version" translatable="false">android_update_version</string>
    <string name="android_force_update_version" translatable="false">android_force_update_version</string>
    <string name="android_force_update_message" translatable="false">android_force_update_message</string>
    <string name="android_update_message" translatable="false">android_update_message</string>
    <string name="integration_id">99B7BEFB-8A5A-4870-814F-D6E3397ACFC0</string>
    <string name="quiz_i_id">F9449300-CF75-4BDE-B711-6ABEDA12FD44</string>
    <string name="hra_i_id">0B3D7B7D-55A2-4772-ADE2-B35FE368755F</string>
    <string name="dass21_i_id">D2D66BA5-C08B-4C3F-8638-8C30CA802C19</string>
    <string name="heartage_i_id">848C7871-DFD5-440E-A00D-A0BEC630DA28</string>
    <string name="azby_s" translatable="false">QnRhbDk0aTdwQXJCdGFsOTRpN3BBckJ0YWw5NGk3cEE=</string>
    <string name="azby_k" translatable="false">MDAwMDAwMDAwMDAwMDAwMA==</string>
    <string name="stress_meter">Stress is bad for our health as it affects our lungs, kidneys, liver, digestive system, nervous system and reproductive organs. You need to ensure you live a stress-free life.</string>
    <string name="biological_info">Biological age, also known as physiological or functional age, denotes how your body changes as a result of nutrition, lifestyle, disease and genetic factors.</string>
    <string name="nutrition_txt_1">Although good, you can still improvise on your eating habits!</string>
    <string name="nutrition_txt_2"><![CDATA[You can always opt for seasonal fruits & veggies, as it will keep you healthy throughout.]]></string>
    <string name="nutrition_txt_3">Keep a check! You can also control your junk-eating urge.</string>
    <string name="nutrition_txt_4">Set your diet plan, follow it rigorously, and you should be fine.</string>
    <string name="nutrition_txt_5">Allow our experts to guide you how! ed with our program today!</string>
    <string name="lifestyle_txt_1"><![CDATA[Avoiding alcohol & tobacco promotes great health!]]></string>
    <string name="lifestyle_txt_2">Looking to quit? Let us help you get rid of such unhealthy habits.</string>
    <string name="lifestyle_txt_3">Enroll with our life goal programs today!</string>
    <string name="lifestyle_txt_4">Great! You are under total control of your quality sleep</string>
    <string name="lifestyle_txt_5">Follow the same routine and keep feeling energetic!</string>
    <string name="lifestyle_txt_6">To boost happiness, follow your interests!</string>
    <string name="lifestyle_txt_7">Take time out to engage yourself in things you always wanted to do.</string>
    <string name="lifestyle_txt_8">It will boost your happiness index! For any guidance, speak to our program experts!</string>
    <string name="bp_poor_txt1">Get up, Get Moving!</string>
    <string name="bp_poor_txt2">Just keep your chin up and continue to work hard! Enroll right now to boost your score.</string>
    <string name="bp_good_txt1">Do it Right!</string>
    <string name="bp_good_txt2">You\'re doing great! But there\'s always a margin for excellence.</string>
    <string name="bp_ex_txt1">You have an excellent body profile score!</string>
    <string name="bp_ex_txt2">You\'re in excellent shape. Keep going…</string>
    <string name="activity_poor_txt1">Commit to be Fit!</string>
    <string name="activity_poor_txt2">Get active! Your daily routine can be boosted.</string>
    <string name="activity_good_txt1">Good, you appear to be quite active!</string>
    <string name="activity_good_txt2">Well, you can still aim higher though!</string>
    <string name="activity_ex_txt1">You\'re super active!</string>
    <string name="activity_ex_txt2">Keep maintaining the benchmarks set by you.</string>
    <string name="nutrition_poor_txt1">Time to better your nutrition score!</string>
    <string name="nutrition_poor_txt2">Healthy habits can be inculcated by adding it to your goals.</string>
    <string name="nutrition_good_txt1">You have a good nutrition score!</string>
    <string name="nutrition_good_txt2">Make the most of it and aim higher.</string>
    <string name="nutrition_ex_txt1">You have an excellent nutrition score!</string>
    <string name="nutrition_ex_txt2">Feel on top of the world! You’re going great.</string>
    <string name="mw_poor_txt1">Mental health is critical to your overall well-being!</string>
    <string name="mw_poor_txt2">We’ll get you going, just connect with our Counsellors.</string>
    <string name="mw_good_txt1">You\'ve got a good mental health score!</string>
    <string name="mw_good_txt2">Take one step further and reach the pinnacle of mental wellness.</string>
    <string name="mw_ex_txt1">Your mental wellness score is excellent!</string>
    <string name="mw_ex_txt2">You’ve got a clean bill of health! Keep it up.</string>
    <string name="lifestyle_poor_txt1">Time to revive your lifestyle!</string>
    <string name="lifestyle_poor_txt2">Get a spring into your step! Get in touch with our Experts.</string>
    <string name="lifestyle_good_txt1">You have a pretty decent lifestyle score!</string>
    <string name="lifestyle_good_txt2">Fight tooth and nail to raise the bar.</string>
    <string name="lifestyle_ex_txt1">Wow! You have an excellent lifestyle score!</string>
    <string name="lifestyle_ex_txt2">Continue the great conduct with same dedication.</string>
    <string name="do_you_feel_fit_and_full_of_energy">Do you feel fit and full of energy?</string>
    <string name="health_screening">Do you undergo a complete body/health screening at least once in a year?</string>
    <string name="suffer_from_disease">Do you suffer from any of the below diseases?</string>
    <string name="health_disease_degree">Does any of your first** or second **degree relative has a history of any of the below diseases?</string>
    <string name="body_profile_immunity">How do you rate your immunity/immune response to seasonal changes or allergies?</string>
    <string name="activity_que_1">How active are you as a part of your daily routine?</string>
    <string name="activity_question_2"><![CDATA[How frequently do you engage in physical activities that include yoga , swimming, aerobic activity, strength training, playing sports(outdoor & indoor), etc.]]></string>
    <string name="nutrition_question_1">Do you maintain a healthy diet with adequate amounts (at least 2 servings) of fruits and vegetables on a daily basis?</string>
    <string name="nutrition_question_2">How often do you snack without noticing that you are eating?</string>
    <string name="nutrition_question_3">How often do you have meals on your scheduled times(Breakfast, Lunch, Dinner)?</string>
    <string name="nutrition_question_4">How often do you consume sweet/salty foods including junk food?</string>
    <string name="nutrition_question_5">Do you drink more than 1 glass of sugary drinks (soft drinks, packaged juices, sports drinks) per day?</string>
    <string name="mentalW_que1">Does your emotional status interfere with your daily activities?</string>
    <string name="submit">Submit</string>
    <string name="view_more">View More</string>
    <string name="close">Close</string>
    <string name="sonde_score">Score</string>
    <string name="sonde_date">Date</string>
    <string name="name">Name</string>
    <string name="rank">Rank</string>
    <string name="sonde_time">Time</string>
    <string name="enjoying_kli_happy_you_app">Enjoying KLI Happy You App?</string>
    <string name="excellent">Excellent</string>
    <string name="poor">Poor</string>
    <string name="please_write_your_feedback_here">Please write your feedback here...</string>
    <string name="sonde_remark">Remark</string>
    <string name="no_data_found">No data found</string>
    <string name="branch_code">Branch Code</string>
    <string name="branch_name">Branch Name</string>
    <string name="branch">Branch</string>
    <string name="code">Participation Code</string>
    <string name="steps">Steps</string>
    <string name="date">Date</string>
    <string name="voucher_name">Voucher \nName</string>
    <string name="voucher_count">"Your Voucher Count is "</string>
    <string name="voucher_status">Voucher \nStatus</string>
    <string name="expiry_date">Voucher \nExpiry Date</string>
</resources>