<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/list_branch_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/branch_code"
                android:textSize="12sp"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_regular"
                android:padding="8dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/list_branch_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/branch_name"
                android:textAlignment="center"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_regular"
                android:padding="8dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/list_enroll_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/sonde_date"
                android:textAlignment="center"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_regular"
                android:padding="8dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/list_enroll_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/code"
                android:textAlignment="center"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_regular"
                android:padding="8dp"
                android:textStyle="bold"/>


        </LinearLayout>



    </RelativeLayout>

</layout>