<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/rank_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/rank"
            android:textSize="12sp"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_regular"
            android:padding="8dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/rank_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/name"
            android:textAlignment="center"
            android:textSize="12sp"
            android:fontFamily="@font/roboto_regular"
            android:padding="8dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/rank_branch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/branch"
            android:textAlignment="center"
            android:textSize="12sp"
            android:fontFamily="@font/roboto_regular"
            android:padding="8dp"
            android:textStyle="bold"/>

       <RelativeLayout
           android:id="@+id/infoLayout"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <TextView
               android:id="@+id/rank_total_steps"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/steps"
               android:textAlignment="center"
               android:textSize="12sp"
               android:layout_marginEnd="20dp"
               android:fontFamily="@font/roboto_regular"
               android:padding="8dp"
               android:textStyle="bold"/>

           <ImageView
               android:id="@+id/ivInfo"
               android:layout_width="15dp"
               android:layout_height="15dp"
               android:layout_gravity="center"
               app:tint="@color/black"
               android:layout_alignParentEnd="true"
               android:layout_centerVertical="true"
               android:visibility="gone"
               tools:visibility="visible"
               android:layout_marginEnd="2dp"
               android:layout_marginStart="4dp"
               android:src="@drawable/ic_info" />

       </RelativeLayout>


    </LinearLayout>


</RelativeLayout>