<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/one_sided_curved_border_info"
        android:orientation="vertical"
        android:padding="20dp">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_app_logo" />


        <TextView
            android:id="@+id/tvFeedbackDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/enjoying_kli_happy_you_app"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:numStars="5"
                android:stepSize="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/poor"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/ratingBar"
                app:layout_constraintTop_toBottomOf="@id/ratingBar"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/excellent"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/ratingBar"
                app:layout_constraintTop_toBottomOf="@id/ratingBar"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvChips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:itemCount="5"
            tools:visibility="visible"
            tools:listitem="@layout/chips_layout"
            />


        <EditText
            android:id="@+id/edtFeedback"
            style="@style/TextStyleBlack16sp"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text_border_blue_new"
            android:gravity="top"
            android:layout_marginTop="@dimen/margin_10dp"
            android:hint="@string/please_write_your_feedback_here"
            android:inputType="text|textMultiLine"
            android:maxLength="1000"
            android:maxLines="10"
            android:padding="8dp"
            android:singleLine="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:orientation="horizontal"
            android:layout_marginVertical="25dp"
            android:layout_marginBottom="10dp"
            android:weightSum="2">

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/blue_rc_bg_8dp"
                android:text="@string/submit"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_5dp"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnClosed"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/wyh_round_btn_dark_red"
                android:text="@string/close"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</layout>