<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/voucher_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/voucher_count_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/voucher_count"
                android:textColor="@color/black"
                android:textSize="14sp">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/black">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:padding="4dp"
                    android:text="@string/voucher_name"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="12sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:padding="4dp"
                    android:text="@string/expiry_date"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="12sp">


                </TextView>


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:padding="4dp"
                    android:text="@string/voucher_status"
                    android:textColor="@color/black"
                    android:textSize="12sp">


                </TextView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="23dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:padding="4dp"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="12sp">

                </TextView>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/black">

            </View>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/voucher_rv"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginTop="8dp"
                android:scrollbars="vertical">

            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/margin_10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:weightSum="2">

            <Button
                android:id="@+id/voucher_view_more_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_10dp"
                android:background="@drawable/blue_rc_bg_8dp"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="16dp"
                android:text="View More"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <Button
                android:id="@+id/voucher_cancel_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:background="@drawable/pink_rc_bg_8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="Close"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16dp"/>

        </LinearLayout>


        <TextView
            android:id="@+id/voucher_no_data_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_medium"
            android:padding="16dp"
            android:text="@string/no_data_found"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:visibility="gone" />


    </RelativeLayout>


</layout>
