<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                android:padding="6dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sonde_score"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_medium"/>

                <TextView
                    android:id="@+id/sonde_history_score"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_medium">

                </TextView>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                android:padding="6dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sonde_remark"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_medium"/>

                <TextView
                    android:id="@+id/sonde_history_quality"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_medium">

                </TextView>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                android:padding="6dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sonde_date"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_medium"/>

                <TextView
                    android:id="@+id/sonde_history_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_medium">

                </TextView>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                android:padding="6dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sonde_time"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_medium"/>

                <TextView
                    android:id="@+id/sonde_history_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_medium">

                </TextView>



            </LinearLayout>


            <Button
                android:id="@+id/btn_view_more"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"

                android:layout_marginTop="10dp"
                android:background="@drawable/wyh_round_btn_dark_red"
                android:gravity="center"
                android:paddingHorizontal="64dp"
                android:text="@string/view_more"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>